--- a/DaoChuLvXIngV1/src/main/res/layout/navig_head.xml
+++ b/DaoChuLvXIngV1/src/main/res/layout/navig_head.xml
@@ -361,6 +361,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="版本检测"
+                android:id="@+id/head_banben"
                 android:textColor="@color/c_333333"
                 />
 
